--- a/views/booksview.xml
+++ b/views/booksview.xml
@@ -40,18 +40,18 @@
             </field>
         </record>
         <!-- This Menu Item will appear in the Upper bar, that's why It needs NO parent or action -->
-        <menuitem id="perpustakaan_sekolah_menu_root" name="School Library"/>
+        <!-- <menuitem id="perpustakaan_sekolah_menu_root" name="School Library"/> -->
         
         <record id="books_buku_act_window" model="ir.actions.act_window">
             <field name="type">ir.actions.act_window</field>
             <field name="name">Buku</field>
             <field name="res_model">books.buku</field>
             <field name="view_mode">list,form</field>
-        </record>
-        <!-- This Menu Item Must have a parent -->
-        <menuitem id="books_menu_categ" name="Mengenai Buku" parent="perpustakaan_sekolah_menu_root" sequence="2"/>
+        </record> 
+        <!-- This Menu Item Must have a parent
+        <! <menuitem id="books_menu_categ" name="Mengenai Buku" parent="perpustakaan_sekolah_menu_root" sequence="2"/> -->
         <!-- This Menu Item must have a parent and an action -->
-        <menuitem id="books_buku_menu_act" name="Buku" parent="books_menu_categ" action="books_buku_act_window" sequence="1"/>
+        <!-- <menuitem id="books_buku_menu_act" name="Buku" parent="books_menu_categ" action="books_buku_act_window" sequence="1"/> -->
                     
     </data>
 </odoo>
