--- a/views/contactview.xml
+++ b/views/contactview.xml
@@ -36,7 +36,7 @@
             </field>
         </record>
         <!-- This Menu Item will appear in the Upper bar, that's why It needs NO parent or action -->
-        <menuitem id="perpustakaan_sekolah_menu_root" name="School Library"/>
+        <!-- <menuitem id="perpustakaan_sekolah_menu_root" name="School Library"/> -->
         
         <record id="res_partner_act_window" model="ir.actions.act_window">
             <field name="type">ir.actions.act_window</field>
@@ -45,8 +45,8 @@
             <field name="view_mode">list,form</field>
         </record>
         <!-- This Menu Item Must have a parent -->
-        <menuitem id="contact_menu_categ" name="Kontak" parent="perpustakaan_sekolah_menu_root" sequence="1"/>
+        <!-- <menuitem id="contact_menu_categ" name="Kontak" parent="perpustakaan_sekolah_menu_root" sequence="1"/> -->
         <!-- This Menu Item must have a parent and an action -->
-        <menuitem id="res_partner_menu_act" name="Informasi Kontak" parent="contact_menu_categ" action="res_partner_act_window" sequence="2"/>
+        <!-- <menuitem id="res_partner_menu_act" name="Informasi Kontak" parent="contact_menu_categ" action="res_partner_act_window" sequence="2"/> -->
     </data>
 </odoo>
