--- a/views/givebackview.xml
+++ b/views/givebackview.xml
@@ -56,7 +56,7 @@
         </record>
 
         <!-- This Menu Item will appear in the Upper bar, that's why It needs NO parent or action -->
-        <menuitem id="perpustakaan_sekolah_menu_root" name="School Library"/>
+        <!-- <menuitem id="perpustakaan_sekolah_menu_root" name="School Library"/> -->
         
         <record id="giveback_pengembalian_act_window" model="ir.actions.act_window">
             <field name="type">ir.actions.act_window</field>
@@ -65,8 +65,8 @@
             <field name="view_mode">list,form</field>
         </record>
         <!-- This Menu Item Must have a parent -->
-        <menuitem id="transaction_menu_categ" name="Transaksi" parent="perpustakaan_sekolah_menu_root" sequence="3"/>
+        <!-- <menuitem id="transaction_menu_categ" name="Transaksi" parent="perpustakaan_sekolah_menu_root" sequence="3"/> -->
         <!-- This Menu Item must have a parent and an action -->
-        <menuitem id="giveback_pengembalian_menu_act" name="Pengembalian" parent="transaction_menu_categ" action="giveback_pengembalian_act_window" sequence="2"/>
+        <!-- <menuitem id="giveback_pengembalian_menu_act" name="Pengembalian" parent="transaction_menu_categ" action="giveback_pengembalian_act_window" sequence="2"/> -->
     </data>
 </odoo>
