--- a/views/logbooksview.xml
+++ b/views/logbooksview.xml
@@ -34,7 +34,7 @@
             </field>
         </record>
         <!-- This Menu Item will appear in the Upper bar, that's why It needs NO parent or action -->
-        <menuitem id="perpustakaan_sekolah_menu_root" name="School Library"/>
+        <!-- <menuitem id="perpustakaan_sekolah_menu_root" name="School Library"/> -->
         
         <record id="logbooks_bukulog_act_window" model="ir.actions.act_window">
             <field name="type">ir.actions.act_window</field>
@@ -43,9 +43,9 @@
             <field name="view_mode">list,form</field>
         </record>
         <!-- This Menu Item Must have a parent -->
-        <menuitem id="books_menu_categ" name="Mengenai Buku" parent="perpustakaan_sekolah_menu_root" sequence="2"/>
+        <!-- <menuitem id="books_menu_categ" name="Mengenai Buku" parent="perpustakaan_sekolah_menu_root" sequence="2"/> -->
         <!-- This Menu Item must have a parent and an action -->
-        <menuitem id="logbooks_bukulog_menu_act" name="Daftar Buku" parent="books_menu_categ" action="logbooks_bukulog_act_window" sequence="2"/>
+        <!-- <menuitem id="logbooks_bukulog_menu_act" name="Daftar Buku" parent="books_menu_categ" action="logbooks_bukulog_act_window" sequence="2"/> -->
         
         
     </data>
