--- a/views/borrowview.xml
+++ b/views/borrowview.xml
@@ -52,7 +52,7 @@
             </field>
         </record>
         <!-- This Menu Item will appear in the Upper bar, that's why It needs NO parent or action -->
-        <menuitem id="perpustakaan_sekolah_menu_root" name="School Library"/>
+        <!-- <menuitem id="perpustakaan_sekolah_menu_root" name="School Library"/> -->
         
         <record id="borrow_peminjaman_act_window" model="ir.actions.act_window">
             <field name="type">ir.actions.act_window</field>
@@ -61,8 +61,8 @@
             <field name="view_mode">list,form</field>
         </record>
         <!-- This Menu Item Must have a parent -->
-        <menuitem id="transaction_menu_categ" name="Transaksi" parent="perpustakaan_sekolah_menu_root" sequence="3"/>
+        <!-- <menuitem id="transaction_menu_categ" name="Transaksi" parent="perpustakaan_sekolah_menu_root" sequence="3"/> -->
         <!-- This Menu Item must have a parent and an action -->
-        <menuitem id="borrow_pengembalian_menu_act" name="Peminjaman" parent="transaction_menu_categ" action="borrow_peminjaman_act_window" sequence="1"/>
+        <!-- <menuitem id="borrow_pengembalian_menu_act" name="Peminjaman" parent="transaction_menu_categ" action="borrow_peminjaman_act_window" sequence="1"/> -->
     </data>
 </odoo>
