--- a/views/penerbit.xml
+++ b/views/penerbit.xml
@@ -52,7 +52,7 @@
             </field>
         </record>
 
-        <record id="action_penerbit" model="ir.actions.act_window">
+        <!-- <record id="action_penerbit" model="ir.actions.act_window">
             <field name="name">Penerbit</field>
             <field name="type">ir.actions.act_window</field>
             <field name="res_model">res.partner</field>
@@ -60,7 +60,7 @@
             <field name="domain">[('is_penerbit', '=', True)]</field>
             <field name="context">{"default_is_penerbit": True}</field>
             <field name="view_id" ref="penerbit_view_tree"/>    
-        </record>
+        </record> -->
         <!-- <record id="action_view_tree_penerbit" model="ir.actions.act_window.view">
             <field name="sequence" eval="2"/>
             <field name="view_mode">tree</field>
@@ -70,16 +70,16 @@
 
         </record> -->
 
-        <menuitem id="perpustakaan_sekolah_menu_root" name="School Library"/>
+        <!-- <menuitem id="perpustakaan_sekolah_menu_root" name="School Library"/> -->
         
-        <!-- <record id="res_partner_act_window" model="ir.actions.act_window">
+        <record id="res_partner_act_window" model="ir.actions.act_window">
             <field name="type">ir.actions.act_window</field>
             <field name="name">Informasi Penerbit</field>
             <field name="res_model">res.partner</field>
             <field name="view_mode">tree,form</field>
-        </record> -->
+        </record>
         <!-- This Menu Item Must have a parent -->
-        <menuitem id="contact_menu_categ" name="Kontak" parent="perpustakaan_sekolah_menu_root" sequence="1"/>
+        <!-- <menuitem id="contact_menu_categ" name="Kontak" parent="perpustakaan_sekolah_menu_root" sequence="1"/> -->
         <!-- This Menu Item must have a parent and an action -->
-        <menuitem id="penerbit_menu_act" name="Informasi Penerbit" parent="contact_menu_categ" action="action_penerbit" sequence="3"/>
+        <!-- <menuitem id="penerbit_menu_act" name="Informasi Penerbit" parent="contact_menu_categ" action="action_penerbit" sequence="3"/> -->
 </odoo>
