--- a/wizard/borrow_report_wizard_views.xml
+++ b/wizard/borrow_report_wizard_views.xml
@@ -2,7 +2,7 @@
 <odoo>
     <data noupdate="1">
         <!-- View Form Wizard -->
-        <record id="view_borrow_report_wizard_form" model="ir.ui.view">
+        <record id="borrow_report_wizard_views" model="ir.ui.view">
             <field name="name">borrow.report.wizard.form</field>
             <field name="model">borrow.report.wizard</field>
             <field name="arch" type="xml">
@@ -19,9 +19,9 @@
                 </form>
             </field>
         </record>
-            <menuitem id="perpustakaan_sekolah_menu_root" name="School Library"/>
+            <!-- <menuitem id="perpustakaan_sekolah_menu_root" name="School Library"/>
         
             <menuitem id="wizard_menu_categ" name="Wizard" parent="perpustakaan_sekolah_menu_root" sequence="4"/>
-            <menuitem id="borrow_report_wizard_actions_menu_act" name="Wizard Action Peminjaman" parent="wizard_menu_categ" action="borrow_report_wizard_actions" sequence="1"/>
+            <menuitem id="borrow_report_wizard_actions_menu_act" name="Wizard Action Peminjaman" parent="wizard_menu_categ" action="borrow_report_wizard_actions" sequence="1"/> -->
     </data>
 </odoo>
